// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GCP DNS mapping screen Name field should be disabled and should contain load balancer name in case of import/edit 1`] = `
<div>
  <div
    class="loadBalancerDnsConfigDialog"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main configHeading"
      data-tooltip-id="gcpConnectorHeader"
      level="2"
    >
      Edit Load Balancer Mock GCP Load Balancer
    </h2>
    <div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--vertical StyledProps--main"
              >
                <div
                  class="bp3-form-group bp3-disabled lbNameInput"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureDnsMapping_name"
                    >
                      Provide a name for the Load balancer
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="name"
                        type="text"
                        value="Mock GCP Load Balancer"
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main configInfo StyledProps--color StyledProps--color-grey400"
                >
                  ce.co.accessPoint.domainMappingDescription
                </p>
                <div
                  class="Layout--horizontal StyledProps--main"
                  style="min-height: 300px; justify-content: space-between;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main customDomainContainer StyledProps--flex StyledProps--flex-alignItems-flex-start"
                  >
                    <div
                      class="bp3-form-group bp3-disabled"
                      data-id="customDomain-1"
                      style="width: 300px; margin-right: 20px;"
                    >
                      <label
                        class="bp3-label"
                        for="customDomain"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="azureDnsMapping_customDomain"
                        >
                          Enter Domain name
                        </span>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="customDomain"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="othersHelpTextContainer"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        ce.co.accessPoint.helpCenter.heading
                      </p>
                    </div>
                    <hr />
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.mapToDNS.title
                    </p>
                    <ol
                      type="1"
                    >
                      <li>
                        ce.co.accessPoint.helpCenter.step1
                      </li>
                      <li>
                        ce.co.accessPoint.helpCenter.step2
                      </li>
                      <li>
                        ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.mapToDNS.step3
                      </li>
                    </ol>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <button
                  class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main saveBtn StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                  data-testid="saveGcpDetails"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                  data-testid="cancelBtn"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Cancel
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GCP DNS mapping screen cancel ap creation 1`] = `
<div>
  <div
    class="loadBalancerDnsConfigDialog"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main configHeading"
      data-tooltip-id="gcpConnectorHeader"
      level="2"
    >
      Edit Load Balancer 
    </h2>
    <div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--vertical StyledProps--main"
              >
                <div
                  class="bp3-form-group bp3-disabled lbNameInput"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureDnsMapping_name"
                    >
                      Provide a name for the Load balancer
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main configInfo StyledProps--color StyledProps--color-grey400"
                >
                  ce.co.accessPoint.domainMappingDescription
                </p>
                <div
                  class="Layout--horizontal StyledProps--main"
                  style="min-height: 300px; justify-content: space-between;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main customDomainContainer StyledProps--flex StyledProps--flex-alignItems-flex-start"
                  >
                    <div
                      class="bp3-form-group bp3-disabled"
                      data-id="customDomain-1"
                      style="width: 300px; margin-right: 20px;"
                    >
                      <label
                        class="bp3-label"
                        for="customDomain"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="azureDnsMapping_customDomain"
                        >
                          Enter Domain name
                        </span>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="customDomain"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="othersHelpTextContainer"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        ce.co.accessPoint.helpCenter.heading
                      </p>
                    </div>
                    <hr />
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.mapToDNS.title
                    </p>
                    <ol
                      type="1"
                    >
                      <li>
                        ce.co.accessPoint.helpCenter.step1
                      </li>
                      <li>
                        ce.co.accessPoint.helpCenter.step2
                      </li>
                      <li>
                        ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.mapToDNS.step3
                      </li>
                    </ol>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <button
                  class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main saveBtn StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                  data-testid="saveGcpDetails"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main Button--with-current-color"
                  data-testid="cancelBtn"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="bp3-spinner bp3-button-spinner"
                  >
                    <div
                      class="bp3-spinner-animation"
                    >
                      <svg
                        height="20"
                        stroke-width="16.00"
                        viewBox="-3.00 -3.00 106.00 106.00"
                        width="20"
                      >
                        <path
                          class="bp3-spinner-track"
                          d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                        />
                        <path
                          class="bp3-spinner-head"
                          d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                          pathLength="280"
                          stroke-dasharray="280 280"
                          stroke-dashoffset="210"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="bp3-button-text"
                  >
                    Cancel
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GCP DNS mapping screen render configuration dialog and fill details 1`] = `
<div>
  <div
    class="loadBalancerDnsConfigDialog"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main configHeading"
      data-tooltip-id="gcpConnectorHeader"
      level="2"
    >
      Create a new Load Balancer
    </h2>
    <div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--vertical StyledProps--main"
              >
                <div
                  class="bp3-form-group lbNameInput"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureDnsMapping_name"
                    >
                      Provide a name for the Load balancer
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main configInfo StyledProps--color StyledProps--color-grey400"
                >
                  ce.co.accessPoint.domainMappingDescription
                </p>
                <div
                  class="Layout--horizontal StyledProps--main"
                  style="min-height: 300px; justify-content: space-between;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main customDomainContainer StyledProps--flex StyledProps--flex-alignItems-flex-start"
                  >
                    <div
                      class="bp3-form-group"
                      data-id="customDomain-1"
                      style="width: 300px; margin-right: 20px;"
                    >
                      <label
                        class="bp3-label"
                        for="customDomain"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="azureDnsMapping_customDomain"
                        >
                          Enter Domain name
                        </span>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="customDomain"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="othersHelpTextContainer"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        ce.co.accessPoint.helpCenter.heading
                      </p>
                    </div>
                    <hr />
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.mapToDNS.title
                    </p>
                    <ol
                      type="1"
                    >
                      <li>
                        ce.co.accessPoint.helpCenter.step1
                      </li>
                      <li>
                        ce.co.accessPoint.helpCenter.step2
                      </li>
                      <li>
                        ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.mapToDNS.step3
                      </li>
                    </ol>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <button
                  class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main saveBtn StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                  data-testid="saveGcpDetails"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GCP DNS mapping screen render configuration dialog and fill details 2`] = `
<div>
  <div
    class="loadBalancerDnsConfigDialog"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main configHeading"
      data-tooltip-id="gcpConnectorHeader"
      level="2"
    >
      Create a new Load Balancer
    </h2>
    <div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--vertical StyledProps--main"
              >
                <div
                  class="bp3-form-group lbNameInput"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureDnsMapping_name"
                    >
                      Provide a name for the Load balancer
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="GCP AP"
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main configInfo StyledProps--color StyledProps--color-grey400"
                >
                  ce.co.accessPoint.domainMappingDescription
                </p>
                <div
                  class="Layout--horizontal StyledProps--main"
                  style="min-height: 300px; justify-content: space-between;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main customDomainContainer StyledProps--flex StyledProps--flex-alignItems-flex-start"
                  >
                    <div
                      class="bp3-form-group"
                      data-id="customDomain-1"
                      style="width: 300px; margin-right: 20px;"
                    >
                      <label
                        class="bp3-label"
                        for="customDomain"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="azureDnsMapping_customDomain"
                        >
                          Enter Domain name
                        </span>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="customDomain"
                            type="text"
                            value="custom.domain.test"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="othersHelpTextContainer"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        ce.co.accessPoint.helpCenter.heading
                      </p>
                    </div>
                    <hr />
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.mapToDNS.title
                    </p>
                    <ol
                      type="1"
                    >
                      <li>
                        ce.co.accessPoint.helpCenter.step1
                      </li>
                      <li>
                        ce.co.accessPoint.helpCenter.step2
                      </li>
                      <li>
                        ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.mapToDNS.step3
                      </li>
                    </ol>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <button
                  class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main saveBtn StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                  data-testid="saveGcpDetails"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="bp3-spinner bp3-button-spinner"
                  >
                    <div
                      class="bp3-spinner-animation"
                    >
                      <svg
                        height="20"
                        stroke-width="16.00"
                        viewBox="-3.00 -3.00 106.00 106.00"
                        width="20"
                      >
                        <path
                          class="bp3-spinner-track"
                          d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                        />
                        <path
                          class="bp3-spinner-head"
                          d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                          pathLength="280"
                          stroke-dasharray="280 280"
                          stroke-dashoffset="210"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="bp3-button-text"
                  >
                    Continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GCP DNS mapping screen render second step 1`] = `
<div>
  <div
    class="loadBalancerDnsConfigDialog"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main configHeading"
      data-tooltip-id="gcpConnectorHeader"
      level="2"
    >
      Create a new Load Balancer
    </h2>
    <div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--horizontal StyledProps--main formFieldRow"
              >
                <div
                  class="bp3-form-group"
                  data-id="region-0"
                >
                  <label
                    class="bp3-label"
                    for="region"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="lbFormSecond_region"
                    >
                      regionLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="region"
                            placeholder="- pipeline.regionPlaceholder -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="zone-1"
                >
                  <label
                    class="bp3-label"
                    for="zone"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="lbFormSecond_zone"
                    >
                      ce.co.accessPoint.zone
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="zone"
                            placeholder="- ce.co.accessPoint.select.zone -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main formFieldRow"
              >
                <div
                  class="bp3-form-group"
                  data-id="vpc-2"
                >
                  <label
                    class="bp3-label"
                    for="vpc"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="lbFormSecond_vpc"
                    >
                      ce.co.accessPoint.vpcLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="vpc"
                            placeholder="- ce.co.accessPoint.select.vpc -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="securityGroups-3"
                >
                  <label
                    class="bp3-label"
                    for="securityGroups"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="lbFormSecond_securityGroups"
                    >
                      ce.co.accessPoint.networkTagsLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="bp3-input bp3-tag-input bp3-multi-select"
                          >
                            <div
                              class="bp3-tag-input-values"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input-ghost bp3-multi-select-tag-input-input"
                                name="securityGroups"
                                placeholder="- Select -"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main formFieldRow"
              >
                <div
                  class="bp3-form-group"
                  data-id="subnet_name-4"
                >
                  <label
                    class="bp3-label"
                    for="subnet_name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="lbFormSecond_subnet_name"
                    >
                      ce.co.accessPoint.subnet
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="subnet_name"
                            placeholder="- ce.co.accessPoint.select.subnet -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="machine_type-5"
                >
                  <label
                    class="bp3-label"
                    for="machine_type"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="lbFormSecond_machine_type"
                    >
                      ce.co.accessPoint.machineType
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="machine_type"
                            placeholder="- ce.co.accessPoint.select.machineType -"
                            style="padding-right: 0px;"
                            type="text"
                            value="a2-highgpu-1g"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main formFieldRow"
              >
                <div
                  class="bp3-form-group"
                  data-id="cert_secret_id-6"
                >
                  <label
                    class="bp3-label"
                    for="cert_secret_id"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="tlsCertificateSecretId"
                    >
                      ce.co.accessPoint.gcpCertificateId
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="cert_secret_id"
                        placeholder="ce.co.accessPoint.gcpCertificatePlaceholder"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="key_secret_id-7"
                >
                  <label
                    class="bp3-label"
                    for="key_secret_id"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="tlsPrivateKeySecretId"
                    >
                      ce.co.accessPoint.gcpSecretId
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="key_secret_id"
                        placeholder="ce.co.accessPoint.gcpSecretPlaceholder"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
                style="margin-top: 220px;"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
                  data-testid="previousButton"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    Back
                  </span>
                </button>
                <button
                  class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Save Load Balancer
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
